// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Activity> hook:styler 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "center",
      },
      undefined,
      Array [
        Object {
          "marginBottom": 16,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#a3a3a3",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#a3a3a3",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#a3a3a3",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`<Activity> renders 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "center",
      },
      undefined,
      Array [
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#a3a3a3",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#a3a3a3",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#a3a3a3",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`<Activity> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "center",
      },
      undefined,
      Array [
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#e85a7e",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#e85a7e",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#e85a7e",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`<Activity> when {size} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "center",
      },
      undefined,
      Array [
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#a3a3a3",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#a3a3a3",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#a3a3a3",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`<Activity> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "center",
      },
      undefined,
      Array [
        Object {
          "backgroundColor": "#191919",
          "padding": 16,
        },
      ],
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#a3a3a3",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#a3a3a3",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#a3a3a3",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;
